Project: ELIS company env loader. Api path fixes. HEPHAESTUS: Company and headquarters ops implementation. HESTIA: Delete user ops. Registration and user repository fixes.

--- a/src/main/resources/email/admin-first-access-credentials-template.html
+++ b/src/main/resources/email/admin-first-access-credentials-template.html
@@ -136,7 +136,7 @@ end preheader -->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Benvenuto in <i>Para<span style="color: blue">ll</span>el</i>, {firstName}!</h1>
+                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Benvenuto in <i>Para<span style="color: #2196f3">ll</span>el</i>, {firstName}!</h1>
                     </td>
                 </tr>
             </table>
@@ -165,9 +165,9 @@ end preheader -->
                         <p align="center">//</p>
                         <p style="margin: 0;">
                             Gentile {firstName},<br>
-                            benvenuto nel mondo <i>Para<span style="color: blue">ll</span>el</i>!
+                            benvenuto nel mondo <i>Parallel</i>!
                             <br><br>
-                            Inizia subito a esplorare la nostra applicazione, accedendo con le seguenti credenziali!
+                            Sei essenziale per la nostra applicazione: accedi con le seguenti credenziali!
                             <br><br><b>
                             Username: <i>{email}</i><br>
                             Password: <i>{password}</i>
