--- a/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
+++ b/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
@@ -24,6 +24,7 @@
                 src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
             }
         }
+
         /**
          * Avoid browser level font resizing.
          * 1. Windows Mobile
@@ -36,6 +37,7 @@
             -ms-text-size-adjust: 100%; /* 1 */
             -webkit-text-size-adjust: 100%; /* 2 */
         }
+
         /**
          * Remove extra space added to tables and cells in Outlook.
          */
@@ -44,12 +46,14 @@
             mso-table-rspace: 0pt;
             mso-table-lspace: 0pt;
         }
+
         /**
          * Better fluid images in Internet Explorer.
          */
         img {
             -ms-interpolation-mode: bicubic;
         }
+
         /**
          * Remove blue links for iOS devices.
          */
@@ -61,27 +65,32 @@
             color: inherit !important;
             text-decoration: none !important;
         }
+
         /**
          * Fix centering issues in Android 4.4.
          */
         div[style*="margin: 16px 0;"] {
             margin: 0 !important;
         }
+
         body {
             width: 100% !important;
             height: 100% !important;
             padding: 0 !important;
             margin: 0 !important;
         }
+
         /**
          * Collapse table borders to avoid space between cells.
          */
         table {
             border-collapse: collapse !important;
         }
+
         a {
             color: #1a82e2;
         }
+
         img {
             height: auto;
             line-height: 100%;
@@ -135,8 +144,10 @@ end preheader -->
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Benvenuto in <i>Para<span style="color: blue">ll</span>el</i>, {firstName}!</h1>
+                    <td align="left" bgcolor="#ffffff"
+                        style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
+                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
+                            Benvenuto in <i>Para<span style="color: #2196f3">ll</span>el</i>, {firstName}!</h1>
                     </td>
                 </tr>
             </table>
@@ -161,17 +172,21 @@ end preheader -->
 
                 <!-- start copy -->
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+                    <td align="left" bgcolor="#ffffff"
+                        style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p align="center">//</p>
                         <p style="margin: 0;">
                             Gentile {firstName},<br>
-                            benvenuto nel mondo <i>Para<span style="color: blue">ll</span>el</i>!
+                            benvenuto nel mondo <i>Parallel</i>!
                             <br><br>
-                            Inizia subito a esplorare la nostra applicazione, accedendo con le seguenti credenziali!
-                            <br><br><b>
-                            Username: <i>{email}</i><br>
-                            Password: <i>{password}</i>
-                        </b><br><br>
+                            In quanto <i><u>receptionist di sede</u></i>, sei essenziale per il nostro servizio.<br>
+                            Accedi con le seguenti credenziali!
+                            <br><br>
+                            <b>
+                                Username: <i>{email}</i><br>
+                                Password: <i>{password}</i>
+                            </b>
+                            <br><br>
                             Non vediamo l'ora di averti a bordo!
                             <br>
                         <p align="center">//</p>
@@ -201,7 +216,8 @@ end preheader -->
 
                 <!-- start permission -->
                 <tr>
-                    <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+                    <td align="center" bgcolor="#e9ecef"
+                        style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
                         <p style="margin: 0;">
                             Hai ricevuto questa email perché qualcuno ti ha iscritto a questo servizio.
                             Se ritieni si tratti di un errore, cancella l'email senza problemi.
