Project: piccola azienda on startup; getPrincipalOrThrow fix; Transactional fix. HEPHAESTUS: observer design pattern -> notify observers via email when 65% wp booked on a date; toggle (add/remove) observers from hq. HESTIA: birth date validation on update personal data. HERMES: -. PONOS: observer strategy HqWpBookingsObserverService. TALOS: -.

--- a/src/main/resources/email/workplace-booking-template.html
+++ b/src/main/resources/email/workplace-booking-template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Password aggiornata con successo!</title>
+    <title>Prenotazione effettuata con successo!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         /**
@@ -41,8 +41,8 @@
          */
         table,
         td {
-            mso-table-rspace: 0pt;
-            mso-table-lspace: 0pt;
+            mso-table-rspace: 0;
+            mso-table-lspace: 0;
         }
         /**
          * Better fluid images in Internet Explorer.
