--- a/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
+++ b/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
 
     <meta charset="utf-8">
@@ -43,8 +43,8 @@
          */
         table,
         td {
-            mso-table-rspace: 0pt;
-            mso-table-lspace: 0pt;
+            mso-table-rspace: 0;
+            mso-table-lspace: 0;
         }
 
         /**
