Project: overall fixes. AGORA: Event controller and service; observer -> email. HEPHAESTUS: -. HESTIA: -. HERMES: -. MNEMOSYNE: -. TALOS: -.

--- a/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
+++ b/src/main/resources/email/headquarters-receptionist-first-access-credentials-template.html
@@ -183,8 +183,8 @@ end preheader -->
                             Accedi con le seguenti credenziali!
                             <br><br>
                             <b>
-                                Username: <i>{email}</i><br>
-                                Password: <i>{password}</i>
+                                <span style="color: #2196f3">Username</span>: <i>{email}</i><br>
+                                <span style="color: #2196f3">Password</span>: <i>{password}</i>
                             </b>
                             <br><br>
                             Non vediamo l'ora di averti a bordo!
