--- a/src/main/resources/email/admin-first-access-credentials-template.html
+++ b/src/main/resources/email/admin-first-access-credentials-template.html
@@ -169,8 +169,8 @@ end preheader -->
                             <br><br>
                             Sei essenziale per la nostra applicazione: accedi con le seguenti credenziali!
                             <br><br><b>
-                            Username: <i>{email}</i><br>
-                            Password: <i>{password}</i>
+                            <span style="color: #2196f3">Username</span>: <i>{email}</i><br>
+                            <span style="color: #2196f3">Password</span>: <i>{password}</i>
                         </b><br><br>
                             Non vediamo l'ora di averti a bordo!
                             <br>
