--- a/src/main/resources/email/default-first-access-credentials-template.html
+++ b/src/main/resources/email/default-first-access-credentials-template.html
@@ -182,8 +182,8 @@ end preheader -->
                             Inizia subito a esplorare la nostra applicazione, accedendo con le seguenti credenziali!
                             <br><br>
                             <b>
-                                Username: <i>{email}</i><br>
-                                Password: <i>{password}</i>
+                                <span style="color: #2196f3">Username</span>: <i>{email}</i><br>
+                                <span style="color: #2196f3">Password</span>: <i>{password}</i>
                             </b>
                             <br><br>
                             Non vediamo l'ora di averti a bordo!
