--- a/src/main/resources/email/new-headquarters-event-template.html
+++ b/src/main/resources/email/new-headquarters-event-template.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Prenotazione effettuata con successo!</title>
+    <title>Un evento che potrebbe interessarti...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         /**
@@ -136,7 +136,7 @@ end preheader -->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Prenotazione effettuata con successo!</h1>
+                        <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Un evento che potrebbe interessarti...</h1>
                     </td>
                 </tr>
             </table>
@@ -164,17 +164,20 @@ end preheader -->
                     <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p align="center">//</p>
                         <p style="margin: 0;">
-                            Ciao {firstName},<br>
-                            La recente prenotazione è stata effettuata con successo.
-                            <br><br>
-                            A seguire i dettagli:
+                            Ciao, {firstName}!<br>
+                            Ecco un evento che potrebbe interessarti:
                             <br><br><b>
+                            <span style="color: #2196f3">Evento</span>: <i>{eventName}</i><br>
                             <span style="color: #2196f3">Azienda</span>: <i>{companyName}</i><br>
                             <span style="color: #2196f3">Sede</span>: <i>{headquartersCity}</i> | <i>{headquartersAddress}</i><br>
-                            <span style="color: #2196f3">Data</span>: <i>{bookingDate}</i><br>
-                            <span style="color: #2196f3">Postazione</span>: <i>{workspaceName}</i> ({workspaceFloor}) | <i>{workplaceName}</i>
+                            <span style="color: #2196f3">Data</span>: <i>{eventDate}</i><br>
+                            <span style="color: #2196f3">Ora di inizio</span>: <i>{eventStartTime}</i><br>
+                            <span style="color: #2196f3">Ora di fine</span>: <i>{eventEndTime}</i><br>
+                            <span style="color: #2196f3">Posti disponibili</span>: <i>{eventMaxPlaces}</i>
                         </b><br><br>
-                            Non vediamo l'ora di vederti!
+                            Sicuro di volertelo perdere?
+                            <br><br>
+                            Pensaci su, noi ti aspettiamo!
                             <br>
                         <p align="center">//</p>
                     </td>
@@ -203,8 +206,13 @@ end preheader -->
 
                 <!-- start permission -->
                 <tr>
-                    <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-
+                    <td align="center" bgcolor="#e9ecef"
+                        style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+                        <p style="margin: 0;">
+                            Hai ricevuto questa email perché hai registrato la citata sede come preferita.
+                            Se desideri non ricevere ulteriori email del genere, disabilita la preferenza dalla nostra
+                            applicazione in qualunque momento.
+                        </p>
                     </td>
                 </tr>
                 <!-- end permission -->
